Мелки доработки UI
